[package]
name = "rustiq-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
sqlite = "0.31.1"

# multi-thread dependencies
rayon = { version = "1.8.0", optional = true }

# bin dependencies
axum = { version = "0.7.4", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }


[features]
default = ["multi-thread", "simd"]
multi-thread = ["dep:rayon"]
simd = []
