[package]
name = "iqdb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
sqlite = "0.31.1"

rayon = { version = "1.8.0", optional = true }

[features]
default = ["multi-thread", "simd"]
multi-thread = ["dep:rayon"]
simd = []
