[package]
name = "iqdb-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
sqlite = "0.36.1"

rayon = { version = "1.10.0", optional = true }

[features]
default = ["multi-thread"]
multi-thread = ["dep:rayon"]
