[package]
name = "iqdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
iqdb-rs = { path = "../lib", default-features = false }

axum = { version = "0.7.4", features = ["multipart"] }
image = "0.24.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite = "0.31.1"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }

[features]
default = ["multi-thread", "simd"]
multi-thread = ["iqdb-rs/multi-thread"]
simd = ["iqdb-rs/simd"]