[package]
name = "iqdb-server"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
iqdb-rs = { path = "../lib", default-features = false }

axum = { version = "0.7.7", features = ["multipart"] }
clap = { version = "4.5.19", features = ["derive"] }
image = "0.25.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite = "0.36.1"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread", "signal" ] }

[features]
default = ["multi-thread"]
multi-thread = ["iqdb-rs/multi-thread"]
